# Diary

./: .env.example  .gitignore  ABOUT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DESIGN.md  FIXES_APPLIED.md  GITHUB_PAGES.md  ITS_WORKING.md  LICENSE  PREREQUISITES.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  SECRET_CAPSULE_TECHNICAL_REPORT.html  SECRET_CAPSULE_TECHNICAL_REPORT.md  SECURITY.md  STATUS.md  TECHNICAL_REPORT.md  THREAT_MODEL.md  index.html  package-lock.json  package.json  render.yaml  tsconfig.base.json
.github/workflows/: ci.yml  deploy.yml  docker.yml
apps/frontend/: .env.example  .eslintrc.json  build_log_3.txt  index.html  lint-errors.txt  lint-output.txt  lint_report.txt  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts  vite_log_2.txt
apps/frontend/src/: App.tsx  api.ts  index.css  main.tsx  mockApi.ts  vite-env.d.ts
apps/frontend/src-tauri/: Cargo.toml  tauri.conf.json
apps/frontend/src-tauri/src/: lib.rs  main.rs
apps/frontend/src/__tests__/: app.test.tsx  security.test.ts
apps/frontend/src/auth/: biometricUnlock.ts
apps/server/: .dockerignore  .env.local  Dockerfile  package-deploy.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/server/src/: auth.ts  capsules.ts  db.ts  email.ts  entries.ts  index.ts
assets/: index-BUjzW7gE.css  index-BZNjltuy.js  index-BhVtgKhC.js  index-BwMwXvdf.css  index-C3J9gJGX.css  index-C9qUa7rP.css  index-ClaqEZ4N.js  index-Dlwtef7m.js  index-DnHu3OQN.css  index-DwsgyRHh.js  index-sMHfHNBC.js
(+23 files in other folders)
